--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content=""/>
+    <script src="https://kit.fontawesome.com/ec4ab1634c.js" crossorigin="anonymous"></script>
     <title></title>
   </head>
 
